# django-lockmin

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-test-publish.yml
src/django_lockmin/: __init__.py  admin.py  apps.py  typing.py
